--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon Clone</title>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <link rel="stylesheet"href="firstweb.css">
    
+  <link rel="stylesheet"href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
    <header>
@@ -64,6 +64,7 @@
 
    <div class="herosection">
       <div class="heromessage">
+        
         <p>We're showing you items that ship to India. To see items that ship to a different country, change your delivery address.<a href="#">Click To go Amazon.in</a></p>
       </div>
    </div>
@@ -72,55 +73,55 @@
     <div class=" box" >
         <div class="boxcontent">
             <h3>Clothes Collection</h3>
-            <div class="box-image "style="background-image:url('box1_image.jpg');"></div>
+            <div class="box-image "style="background-image:url('image/box1_image.jpg');"></div>
             <a href="#">See More</a>
         </div>
      </div>
      <div class=" box" >
         <div class="boxcontent">
             <h3>  Health & Personal Care</h3>
-            <div class="box-image "style="background-image:url('box2_image.jpg');"></div>
+            <div class="box-image "style="background-image:url('image/box2_image.jpg');"></div>
             <a href="#">See More</a>
         </div>
      </div>
      <div class=" box" >
         <div class="boxcontent">
             <h3>Furniture & Decoration</h3>
-            <div class="box-image "style="background-image:url('box3_image.jpg');"></div>
+            <div class="box-image "style="background-image:url('image/box3_image.jpg');"></div>
             <a href="#">See More</a>
         </div>
      </div>
      <div class=" box" >
         <div class="boxcontent">
             <h3>Electronic Gadgets</h3>
-            <div class="box-image "style="background-image:url('box4_image.jpg');"></div>
+            <div class="box-image "style="background-image:url('image/box4_image.jpg');"></div>
             <a href="#">See More</a>
         </div>
      </div>
      <div class=" box" >
         <div class="boxcontent">
             <h3>Makeup Products</h3>
-            <div class="box-image "style="background-image:url('box5_image.jpg');"></div>
+            <div class="box-image "style="background-image:url('image/box5_image.jpg');"></div>
             <a href="#">See More</a>
         </div>
      </div>
      <div class=" box" >
         <div class="boxcontent">
             <h3>Pets Animal</h3>
-            <div class="box-image "style="background-image:url('box6_image.jpg');"></div>
+            <div class="box-image "style="background-image:url('image/box6_image.jpg');"></div>
             <a href="#">See More</a>
         </div>
      </div><div class=" box" >
         <div class="boxcontent">
             <h3>Kids Collection</h3>
-            <div class="box-image "style="background-image:url('box7_image.jpg');"></div>
+            <div class="box-image "style="background-image:url('image/box7_image.jpg');"></div>
             <a href="#">See More</a>
         </div>
      </div>
      <div class=" box" >
         <div class="boxcontent">
             <h3>JEWELLERY</h3>
-            <div class="box-image "style="background-image:url('download.jpg');"></div>
+            <div class="box-image "style="background-image:url('image/download.jpg');"></div>
             <a href="#">See More</a>
         </div>
      </div>
